B&L QA/objects/Key_Products_IOLs__c.object
<CustomObject>
    <description>Used by EMEASU. Used to log the key products that an account orders.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by EMEASU</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Products IOLs</relationshipLabel>
        <relationshipName>Key_Products_IOLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>To detail any comments about the customers IOL choice. Used by EMEASU</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consignment_Location__c</fullName>
        <description>USed by EMEASU to store the PS consignment location.</description>
        <label>Consignment Location</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOL_Model__c</fullName>
        <description>Available IOL Models. Used by EMEASU</description>
        <label>IOL Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos Adapt - 3171xxx</fullName>
                </value>
                <value>
                    <fullName>Akreos AO - ADAPTAOxxxx</fullName>
                </value>
                <value>
                    <fullName>Akreos MICS - MI60Gxxxx</fullName>
                </value>
                <value>
                    <fullName>Crystalens AO - AT50AO-xxxx / AT52AO-xxxx</fullName>
                </value>
                <value>
                    <fullName>Crystalens HD - HD500-xxxx / HD520-xxxx</fullName>
                </value>
                <value>
                    <fullName>EZE 55 - 7Wxxx</fullName>
                </value>
                <value>
                    <fullName>EZE 60 - 8Axxx</fullName>
                </value>
                <value>
                    <fullName>EZE 65 - 8Nxxx</fullName>
                </value>
                <value>
                    <fullName>L122UV - 8Uxxx</fullName>
                </value>
                <value>
                    <fullName>Sofport - LI61AORxxxx</fullName>
                </value>
                <value>
                    <fullName>PMMA - All Models</fullName>
                </value>
                <value>
                    <fullName>EnVista - MX60Axxxx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOL_Price__c</fullName>
        <description>Used to detail IOL price. Used by EMEASU</description>
        <label>IOL Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injector_Model__c</fullName>
        <description>used by EMEASU to advise which injector is coupled with a given IOL. dependant on IOL chosen</description>
        <label>Injector Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IOL_Model__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AI-28</fullName>
                </value>
                <value>
                    <fullName>CI-28</fullName>
                </value>
                <value>
                    <fullName>EZ-28</fullName>
                </value>
                <value>
                    <fullName>LP604350</fullName>
                </value>
                <value>
                    <fullName>PS-27</fullName>
                </value>
                <value>
                    <fullName>Rigid - No Injector Required</fullName>
                </value>
                <value>
                    <fullName>LP604500</fullName>
                </value>
                <value>
                    <fullName>LP604350 EACH</fullName>
                </value>
                <value>
                    <fullName>LP604500EACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Injector_Price__c</fullName>
        <description>Used to store the injector price. Used by EMEASU</description>
        <label>Injector Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Invoice_Specialities__c</fullName>
        <description>Used by EMEASU, used to determine what type or order or invoice process is required for the product</description>
        <label>Order / Invoice Specialities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Replenishment Only (AK)</fullName>
                </value>
                <value>
                    <fullName>Invoice only (VK)</fullName>
                </value>
                <value>
                    <fullName>Invoice + Replenishment (AK/VK)</fullName>
                </value>
                <value>
                    <fullName>See request on order</fullName>
                </value>
                <value>
                    <fullName>Invoice only (N/A)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>Used by EMEASU. Used to define the different prices for different type of german orders</description>
        <inlineHelpText>Only required for Germany</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Only</fullName>
                </value>
                <value>
                    <fullName>Private Ambulant</fullName>
                </value>
                <value>
                    <fullName>Private Stationaer</fullName>
                </value>
                <value>
                    <fullName>Kasse Only</fullName>
                </value>
                <value>
                    <fullName>Kasse Ambulant</fullName>
                </value>
                <value>
                    <fullName>Kasse Stationaer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Consignment Size used by EMEASU CS to identify the IOLs range</description>
        <inlineHelpText>Used to identify consignment order size</inlineHelpText>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standing_Order_End_Dt__c</fullName>
        <description>Used by EMEASU. Used to store the standing order end date.</description>
        <label>Standing Order End Dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Standing_Order_Ref__c</fullName>
        <description>Used to store the standing order reference number if applicable. Used by EMEASU.</description>
        <label>Standing Order Ref</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Key Products IOLs</label>
    <nameField>
        <displayFormat>KPI-{000000}</displayFormat>
        <label>KP IOL Auto Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Products IOLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>